--- a/challenge-03/package.json
+++ b/challenge-03/package.json
@@ -10,7 +10,8 @@
   "author": "novalmahardhika",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "chalk": "^4.1.2",
