migration using sequelize-cli

--- a/challenge-04/package.json
+++ b/challenge-04/package.json
@@ -17,5 +17,9 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0"
+  },
+  "devDependencies": {
+    "babel-register": "^6.26.0",
+    "sequelize-cli": "^6.6.1"
   }
 }
