--- a/challenge-04/package.json
+++ b/challenge-04/package.json
@@ -5,6 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "npx sequelize-cli db:migrate",
+    "migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "seed": "npx sequelize-cli db:seed:all",
+    "seed:undo": "npx sequelize-cli db:seed:all",
     "dev": "nodemon app.js"
   },
   "keywords": [],
