--- a/challenge-06/package.json
+++ b/challenge-06/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.290.0",
     "next": "14.0.0",
     "react": "^18",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "swiper": "^11.0.3",
     "tailwind-merge": "^2.0.0",
