add eslint and set rules eslint config

--- a/challenge-07/package.json
+++ b/challenge-07/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node -r dotenv/config bin/www",
     "develop": "nodemon -r dotenv/config bin/www",
+    "eslint": "npx eslint ./app",
     "db:create": "sequelize db:create",
     "db:drop": "sequelize db:drop",
     "db:migrate": "sequelize db:migrate",
@@ -25,6 +26,7 @@
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
+    "eslint": "^8.53.0",
     "nodemon": "^2.0.16"
   }
 }
