--- a/challenge-07/package.json
+++ b/challenge-07/package.json
@@ -7,10 +7,10 @@
     "start": "node -r dotenv/config bin/www",
     "develop": "nodemon -r dotenv/config bin/www",
     "eslint": "npx eslint ./app",
-    "db:create": "sequelize db:create",
-    "db:drop": "sequelize db:drop",
-    "db:migrate": "sequelize db:migrate",
-    "db:seed": "sequelize db:seed:undo:all && sequelize db:seed:all"
+    "db:create": "npx sequelize db:create",
+    "db:drop": "npx sequelize db:drop",
+    "db:migrate": "npx sequelize db:migrate",
+    "db:seed": "npx sequelize db:seed:undo:all && sequelize db:seed:all"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
