--- a/challenge-07/package.json
+++ b/challenge-07/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "scripts": {
     "start": "node -r dotenv/config bin/www",
-    "develop": "nodemon -r dotenv/config bin/www",
-    "eslint": "npx eslint ./app",
+    "dev": "nodemon -r dotenv/config bin/www",
+    "lint": "npx eslint ./app",
+    "test": "jest --coverage",
     "db:create": "npx sequelize db:create",
     "db:drop": "npx sequelize db:drop",
     "db:migrate": "npx sequelize db:migrate",
@@ -26,7 +27,10 @@
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.8",
     "eslint": "^8.53.0",
-    "nodemon": "^2.0.16"
+    "jest": "^29.7.0",
+    "nodemon": "^2.0.16",
+    "supertest": "^6.3.3"
   }
 }
